# Mitologia

./: .dockerignore  .env.example  .gitignore  Mitologia grega.drawio  README.md  alembic.ini  docker-compose.yml  mitologia_codex_brief.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260703_0001_initial_schema.py
backend/: Dockerfile  railway.json
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: audit.py  entities.py  relationships.py
docs/: railway-runbook.md
frontend/: Dockerfile  package-lock.json  package.json  railway.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/entities/: page.tsx
frontend/src/app/entities/[id]/: page.tsx
frontend/src/app/graph/: GraphView.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/lib/: api.ts
scripts/: bootstrap_database.py  export_graphviz.py  normalize_entities.py  normalize_relationships.py  parse_drawio.py  railway_set_backend_start.sh  seed_database.py
tests/: test_audit_api.py  test_bootstrap_database.py  test_config.py  test_list_limits.py  test_normalize_entities.py  test_normalize_relationships.py  test_parse_drawio.py  test_relationship_api.py  test_search_api.py
